updated portfolio w projects, linkedin, and github links

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,11 @@
   html { 
       font-size: 100%; }
 
-  
-  nav, header, main, article, aside, #contact {
+  body {
+    background-color: rgb(223, 215, 215);
+  }
+
+  nav, header, main, article, aside, #contact{
     display:flexbox;
     background-color: cornflowerblue;
     margin-top: 20px;
@@ -31,7 +34,10 @@
   }
   
   .bio {
-      text-align: left;
+      padding-top: 35px;
+      padding-right: 20px;
+      padding-left: 10px;
+      text-align:justify;
   }
  
 
@@ -67,7 +73,7 @@ article h2 {
     margin-right: 5px;
   }
   article img {
-      border-radius: 50%;
+      
       max-width: 100%;
       height: auto;
   }
@@ -96,7 +102,7 @@ main li {
 }
 
 
-.contactInfo {
+.contact{
     margin-top: 50px;
     margin-left: 150px;
     height: auto;
@@ -107,7 +113,9 @@ main li {
     margin-top: 10px;
     border-radius: 50%;
     height: auto;
-    max-width: 100%;
+    max-width: 100%; 
+}
 
-    
+#contact{
+  text-align: center;
 }
