--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@
     height: auto;
     padding-left: 5px;
     float: left;
+    flex-wrap: wrap;
   }
   
   .bio {
@@ -38,6 +39,7 @@
       padding-right: 20px;
       padding-left: 10px;
       text-align:justify;
+      
   }
  
 
@@ -71,6 +73,7 @@ article h2 {
     height: 100%;
     justify-content: space-between;
     margin-right: 5px;
+    
   }
   article img {
       
